# relib-template

./: .gitignore  Cargo.toml  README.md
host/: Cargo.toml  build.rs
host/src/: main.rs
module/: Cargo.toml  build.rs
module/src/: lib.rs
shared/: Cargo.toml
shared/src/: exports.rs  imports.rs
