[package]
name = "module"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
unloading = ["relib_module/unloading"]

[dependencies]
relib_interface = { version = "0", features = ["include"] }
relib_module = { version = "0" }
shared = { version = "0.1.0", path = "../shared" }

[build-dependencies]
relib_interface = { version = "0", features = ["build"] }
shared = { version = "0.1.0", path = "../shared" }
